[gd_scene load_steps=5 format=3 uid="uid://ebhsubab113h"]

[ext_resource type="Texture2D" uid="uid://74vt11axc23c" path="res://Graphics/colored-transparent_packed.png" id="1_7jllh"]
[ext_resource type="Script" path="res://player.gd" id="1_ro2wo"]
[ext_resource type="PackedScene" uid="uid://dr2q4bx6iiq13" path="res://Scenes/gun.tscn" id="3_7s7be"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0bb0s"]
radius = 7.07107

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 119
script = ExtResource("1_ro2wo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_0bb0s")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_7jllh")
region_enabled = true
region_rect = Rect2(448, 16, 16, 16)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)
position_smoothing_enabled = true
position_smoothing_speed = 100.0

[node name="HitTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Gun" parent="." instance=ExtResource("3_7s7be")]
scale = Vector2(0.375, 0.375)

[node name="ShootingTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="HitTimer" to="." method="_on_hit_timer_timeout"]
[connection signal="timeout" from="ShootingTimer" to="." method="_on_shooting_timer_timeout"]

[editable path="Gun"]
